--- a/newflavorsoftea/1-1-cjh-c/index.html
+++ b/newflavorsoftea/1-1-cjh-c/index.html
@@ -308,11 +308,11 @@
               <div
                 class="projecttoggle__item projecttoggle--information inactive"
               >
-                               → Description
+                               Description
               </div>
 
               <div class="projecttoggle__item projecttoggle--overview inactive">
-                → Overview
+                Overview
               </div>
             </div>
           </div>
@@ -630,7 +630,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-CJH-C&nbsp;&nbsp;1
+                      1-1-CJH-C&nbsp;&nbsp;&nbsp;1
                     </span>
                   </div>
                 </div>
@@ -650,7 +650,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-CJH-C&nbsp;&nbsp;2
+                      1-1-CJH-C&nbsp;&nbsp;&nbsp;2
                     </span>
                   </div>
                 </div>
@@ -670,7 +670,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-CJH-C&nbsp;&nbsp;3
+                      1-1-CJH-C&nbsp;&nbsp;&nbsp;3
                     </span>
                   </div>
                 </div>
@@ -690,7 +690,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-CJH-C&nbsp;&nbsp;4
+                      1-1-CJH-C&nbsp;&nbsp;&nbsp;4
                     </span>
                   </div>
                 </div>
@@ -710,7 +710,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-CJH-C&nbsp;&nbsp;5
+                      1-1-CJH-C&nbsp;&nbsp;&nbsp;5
                     </span>
                   </div>
                 </div>
@@ -730,7 +730,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-CJH-C&nbsp;&nbsp;6
+                      1-1-CJH-C&nbsp;&nbsp;&nbsp;6
                     </span>
                   </div>
                 </div>
@@ -750,7 +750,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-CJH-C&nbsp;&nbsp;7
+                      1-1-CJH-C&nbsp;&nbsp;&nbsp;7
                     </span>
                   </div>
                 </div>
@@ -770,7 +770,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-CJH-C&nbsp;&nbsp;8
+                      1-1-CJH-C&nbsp;&nbsp;&nbsp;8
                     </span>
                   </div>
                 </div>
@@ -790,7 +790,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-CJH-C&nbsp;&nbsp;9
+                      1-1-CJH-C&nbsp;&nbsp;&nbsp;9
                     </span>
                   </div>
                 </div>
