--- a/newflavorsoftea/1-1-cjh-t/index.html
+++ b/newflavorsoftea/1-1-cjh-t/index.html
@@ -308,11 +308,11 @@
               <div
                 class="projecttoggle__item projecttoggle--information inactive"
               >
-                               → Description
+                               Description
               </div>
 
               <div class="projecttoggle__item projecttoggle--overview inactive">
-                → Overview
+                Overview
               </div>
             </div>
           </div>
@@ -544,7 +544,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-CJH-T&nbsp;&nbsp;1
+                      1-1-CJH-T&nbsp;&nbsp;&nbsp;1
                     </span>
                   </div>
                 </div>
@@ -563,7 +563,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-CJH-T&nbsp;&nbsp;2
+                      1-1-CJH-T&nbsp;&nbsp;&nbsp;2
                     </span>
                   </div>
                 </div>
@@ -582,7 +582,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-CJH-T&nbsp;&nbsp;3
+                      1-1-CJH-T&nbsp;&nbsp;&nbsp;3
                     </span>
                   </div>
                 </div>
@@ -601,7 +601,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-CJH-T&nbsp;&nbsp;4
+                      1-1-CJH-T&nbsp;&nbsp;&nbsp;4
                     </span>
                   </div>
                 </div>
@@ -620,7 +620,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-CJH-T&nbsp;&nbsp;5
+                      1-1-CJH-T&nbsp;&nbsp;&nbsp;5
                     </span>
                   </div>
                 </div>
