--- a/newflavorsoftea/1-1-hwk-p/index.html
+++ b/newflavorsoftea/1-1-hwk-p/index.html
@@ -308,11 +308,11 @@
               <div
                 class="projecttoggle__item projecttoggle--information inactive"
               >
-                               → Description
+                               Description
               </div>
 
               <div class="projecttoggle__item projecttoggle--overview inactive">
-                → Overview
+                Overview
               </div>
             </div>
           </div>
@@ -706,7 +706,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-HWK-P&nbsp;&nbsp;1
+                      1-1-HWK-P&nbsp;&nbsp;&nbsp;1
                     </span>
                   </div>
                 </div>
@@ -725,7 +725,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-HWK-P&nbsp;&nbsp;2
+                      1-1-HWK-P&nbsp;&nbsp;&nbsp;2
                     </span>
                   </div>
                 </div>
@@ -744,7 +744,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-HWK-P&nbsp;&nbsp;3
+                      1-1-HWK-P&nbsp;&nbsp;&nbsp;3
                     </span>
                   </div>
                 </div>
@@ -763,7 +763,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-HWK-P&nbsp;&nbsp;4
+                      1-1-HWK-P&nbsp;&nbsp;&nbsp;4
                     </span>
                   </div>
                 </div>
@@ -782,7 +782,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-HWK-P&nbsp;&nbsp;5
+                      1-1-HWK-P&nbsp;&nbsp;&nbsp;5
                     </span>
                   </div>
                 </div>
@@ -801,7 +801,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-HWK-P&nbsp;&nbsp;6
+                      1-1-HWK-P&nbsp;&nbsp;&nbsp;6
                     </span>
                   </div>
                 </div>
@@ -820,7 +820,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-HWK-P&nbsp;&nbsp;7
+                      1-1-HWK-P&nbsp;&nbsp;&nbsp;7
                     </span>
                   </div>
                 </div>
@@ -839,7 +839,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-HWK-P&nbsp;&nbsp;8
+                      1-1-HWK-P&nbsp;&nbsp;&nbsp;8
                     </span>
                   </div>
                 </div>
@@ -858,7 +858,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-HWK-P&nbsp;&nbsp;9
+                      1-1-HWK-P&nbsp;&nbsp;&nbsp;9
                     </span>
                   </div>
                 </div>
@@ -877,7 +877,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-HWK-P&nbsp;&nbsp;10
+                      1-1-HWK-P&nbsp;&nbsp;&nbsp;10
                     </span>
                   </div>
                 </div>
@@ -896,7 +896,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-HWK-P&nbsp;&nbsp;11
+                      1-1-HWK-P&nbsp;&nbsp;&nbsp;11
                     </span>
                   </div>
                 </div>
@@ -915,7 +915,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-HWK-P&nbsp;&nbsp;12
+                      1-1-HWK-P&nbsp;&nbsp;&nbsp;12
                     </span>
                   </div>
                 </div>
@@ -934,7 +934,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-HWK-P&nbsp;&nbsp;13
+                      1-1-HWK-P&nbsp;&nbsp;&nbsp;13
                     </span>
                   </div>
                 </div>
