--- a/newflavorsoftea/1-1-kjh-p/index.html
+++ b/newflavorsoftea/1-1-kjh-p/index.html
@@ -308,11 +308,11 @@
               <div
                 class="projecttoggle__item projecttoggle--information inactive"
               >
-                               → Description
+                               Description
               </div>
 
               <div class="projecttoggle__item projecttoggle--overview inactive">
-                → Overview
+                Overview
               </div>
             </div>
           </div>
@@ -896,7 +896,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-P&nbsp;&nbsp;1
+                      1-1-KJH-P&nbsp;&nbsp;&nbsp;1
                     </span>
                   </div>
                 </div>
@@ -915,7 +915,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-P&nbsp;&nbsp;2
+                      1-1-KJH-P&nbsp;&nbsp;&nbsp;2
                     </span>
                   </div>
                 </div>
@@ -934,7 +934,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-P&nbsp;&nbsp;3
+                      1-1-KJH-P&nbsp;&nbsp;&nbsp;3
                     </span>
                   </div>
                 </div>
@@ -953,7 +953,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-P&nbsp;&nbsp;4
+                      1-1-KJH-P&nbsp;&nbsp;&nbsp;4
                     </span>
                   </div>
                 </div>
@@ -972,7 +972,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-P&nbsp;&nbsp;5
+                      1-1-KJH-P&nbsp;&nbsp;&nbsp;5
                     </span>
                   </div>
                 </div>
@@ -991,7 +991,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-P&nbsp;&nbsp;6
+                      1-1-KJH-P&nbsp;&nbsp;&nbsp;6
                     </span>
                   </div>
                 </div>
@@ -1010,7 +1010,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-P&nbsp;&nbsp;7
+                      1-1-KJH-P&nbsp;&nbsp;&nbsp;7
                     </span>
                   </div>
                 </div>
@@ -1029,7 +1029,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-P&nbsp;&nbsp;8
+                      1-1-KJH-P&nbsp;&nbsp;&nbsp;8
                     </span>
                   </div>
                 </div>
@@ -1048,7 +1048,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-P&nbsp;&nbsp;9
+                      1-1-KJH-P&nbsp;&nbsp;&nbsp;9
                     </span>
                   </div>
                 </div>
@@ -1067,7 +1067,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-P&nbsp;&nbsp;10
+                      1-1-KJH-P&nbsp;&nbsp;&nbsp;10
                     </span>
                   </div>
                 </div>
@@ -1086,7 +1086,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-P&nbsp;&nbsp;11
+                      1-1-KJH-P&nbsp;&nbsp;&nbsp;11
                     </span>
                   </div>
                 </div>
@@ -1105,7 +1105,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-P&nbsp;&nbsp;12
+                      1-1-KJH-P&nbsp;&nbsp;&nbsp;12
                     </span>
                   </div>
                 </div>
@@ -1124,7 +1124,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-P&nbsp;&nbsp;13
+                      1-1-KJH-P&nbsp;&nbsp;&nbsp;13
                     </span>
                   </div>
                 </div>
@@ -1143,7 +1143,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-P&nbsp;&nbsp;14
+                      1-1-KJH-P&nbsp;&nbsp;&nbsp;14
                     </span>
                   </div>
                 </div>
@@ -1162,7 +1162,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-P&nbsp;&nbsp;15
+                      1-1-KJH-P&nbsp;&nbsp;&nbsp;15
                     </span>
                   </div>
                 </div>
@@ -1181,7 +1181,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-P&nbsp;&nbsp;16
+                      1-1-KJH-P&nbsp;&nbsp;&nbsp;16
                     </span>
                   </div>
                 </div>
@@ -1200,7 +1200,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-P&nbsp;&nbsp;17
+                      1-1-KJH-P&nbsp;&nbsp;&nbsp;17
                     </span>
                   </div>
                 </div>
@@ -1219,7 +1219,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-P&nbsp;&nbsp;18
+                      1-1-KJH-P&nbsp;&nbsp;&nbsp;18
                     </span>
                   </div>
                 </div>
@@ -1238,7 +1238,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-P&nbsp;&nbsp;19
+                      1-1-KJH-P&nbsp;&nbsp;&nbsp;19
                     </span>
                   </div>
                 </div>
@@ -1257,7 +1257,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-P&nbsp;&nbsp;20
+                      1-1-KJH-P&nbsp;&nbsp;&nbsp;20
                     </span>
                   </div>
                 </div>
@@ -1276,7 +1276,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-P&nbsp;&nbsp;21
+                      1-1-KJH-P&nbsp;&nbsp;&nbsp;21
                     </span>
                   </div>
                 </div>
@@ -1295,7 +1295,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-P&nbsp;&nbsp;22
+                      1-1-KJH-P&nbsp;&nbsp;&nbsp;22
                     </span>
                   </div>
                 </div>
@@ -1314,7 +1314,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-P&nbsp;&nbsp;23
+                      1-1-KJH-P&nbsp;&nbsp;&nbsp;23
                     </span>
                   </div>
                 </div>
