--- a/index.html
+++ b/index.html
@@ -200,11 +200,13 @@
               <br />
 
               Yongsan-gu, Seoul
-              <br /><br />
+              <br />
+
+              <!--               
               <a href="mailto:sansuhwatea@naver.com">sansuhwatea@naver.com</a>
               <br />
 
-              +82 2 749 3138
+              +82 2 749 3138 -->
             </p>
           </div>
 
@@ -274,9 +276,9 @@
           </div>
 
           <div class="menu__item pages">
-            <div class="pages__item">
+            <!-- <div class="pages__item">
               <a href="./">Home </a>
-            </div>
+            </div> -->
 
             <div class="pages__item">
               <a href="./information/" class="page--information">
@@ -311,13 +313,13 @@
               class="mapping__sort__button mapping__sort--random sort--active"
               data-sort="random"
             >
-              shuffle
+              <img src="./assets/img/shuffle.png" />&nbsp;Shuffle
             </div>
             <div
               class="mapping__sort__button mapping__sort--chronological sort--inactive"
               data-sort="default"
             >
-              in order
+              <img src="./assets/img/inorder.png" />&nbsp;In order
             </div>
           </div>
         </div>
