--- a/newflavorsoftea/1-1-hwk-t/index.html
+++ b/newflavorsoftea/1-1-hwk-t/index.html
@@ -308,11 +308,11 @@
               <div
                 class="projecttoggle__item projecttoggle--information inactive"
               >
-                               → Description
+                               Description
               </div>
 
               <div class="projecttoggle__item projecttoggle--overview inactive">
-                → Overview
+                Overview
               </div>
             </div>
           </div>
@@ -573,7 +573,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-HWK-T&nbsp;&nbsp;1
+                      1-1-HWK-T&nbsp;&nbsp;&nbsp;1
                     </span>
                   </div>
                 </div>
@@ -592,7 +592,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-HWK-T&nbsp;&nbsp;2
+                      1-1-HWK-T&nbsp;&nbsp;&nbsp;2
                     </span>
                   </div>
                 </div>
@@ -611,7 +611,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-HWK-T&nbsp;&nbsp;3
+                      1-1-HWK-T&nbsp;&nbsp;&nbsp;3
                     </span>
                   </div>
                 </div>
@@ -630,7 +630,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-HWK-T&nbsp;&nbsp;4
+                      1-1-HWK-T&nbsp;&nbsp;&nbsp;4
                     </span>
                   </div>
                 </div>
@@ -649,7 +649,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-HWK-T&nbsp;&nbsp;5
+                      1-1-HWK-T&nbsp;&nbsp;&nbsp;5
                     </span>
                   </div>
                 </div>
@@ -668,7 +668,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-HWK-T&nbsp;&nbsp;6
+                      1-1-HWK-T&nbsp;&nbsp;&nbsp;6
                     </span>
                   </div>
                 </div>
