--- a/newflavorsoftea/1-1-kjh-t/index.html
+++ b/newflavorsoftea/1-1-kjh-t/index.html
@@ -308,11 +308,11 @@
               <div
                 class="projecttoggle__item projecttoggle--information inactive"
               >
-                               → Description
+                               Description
               </div>
 
               <div class="projecttoggle__item projecttoggle--overview inactive">
-                → Overview
+                Overview
               </div>
             </div>
           </div>
@@ -1040,7 +1040,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;1
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;1
                     </span>
                   </div>
                 </div>
@@ -1059,7 +1059,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;2
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;2
                     </span>
                   </div>
                 </div>
@@ -1078,7 +1078,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;3
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;3
                     </span>
                   </div>
                 </div>
@@ -1097,7 +1097,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;4
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;4
                     </span>
                   </div>
                 </div>
@@ -1116,7 +1116,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;5
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;5
                     </span>
                   </div>
                 </div>
@@ -1135,7 +1135,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;6
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;6
                     </span>
                   </div>
                 </div>
@@ -1154,7 +1154,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;7
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;7
                     </span>
                   </div>
                 </div>
@@ -1173,7 +1173,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;8
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;8
                     </span>
                   </div>
                 </div>
@@ -1192,7 +1192,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;9
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;9
                     </span>
                   </div>
                 </div>
@@ -1211,7 +1211,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;10
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;10
                     </span>
                   </div>
                 </div>
@@ -1230,7 +1230,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;11
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;11
                     </span>
                   </div>
                 </div>
@@ -1249,7 +1249,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;12
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;12
                     </span>
                   </div>
                 </div>
@@ -1268,7 +1268,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;13
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;13
                     </span>
                   </div>
                 </div>
@@ -1287,7 +1287,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;14
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;14
                     </span>
                   </div>
                 </div>
@@ -1306,7 +1306,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;15
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;15
                     </span>
                   </div>
                 </div>
@@ -1325,7 +1325,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;16
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;16
                     </span>
                   </div>
                 </div>
@@ -1344,7 +1344,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;17
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;17
                     </span>
                   </div>
                 </div>
@@ -1363,7 +1363,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;18
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;18
                     </span>
                   </div>
                 </div>
@@ -1382,7 +1382,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;19
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;19
                     </span>
                   </div>
                 </div>
@@ -1401,7 +1401,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;20
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;20
                     </span>
                   </div>
                 </div>
@@ -1420,7 +1420,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;21
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;21
                     </span>
                   </div>
                 </div>
@@ -1439,7 +1439,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;22
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;22
                     </span>
                   </div>
                 </div>
@@ -1458,7 +1458,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;23
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;23
                     </span>
                   </div>
                 </div>
@@ -1477,7 +1477,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;24
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;24
                     </span>
                   </div>
                 </div>
@@ -1496,7 +1496,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;25
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;25
                     </span>
                   </div>
                 </div>
@@ -1515,7 +1515,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;26
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;26
                     </span>
                   </div>
                 </div>
@@ -1534,7 +1534,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;27
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;27
                     </span>
                   </div>
                 </div>
@@ -1553,7 +1553,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;28
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;28
                     </span>
                   </div>
                 </div>
@@ -1572,7 +1572,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;29
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;29
                     </span>
                   </div>
                 </div>
@@ -1591,7 +1591,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;30
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;30
                     </span>
                   </div>
                 </div>
@@ -1610,7 +1610,7 @@
                   <div class="item__img__text">
                     <span class="text__projectnumber"> </span>
                     <span class="text__imagecount">
-                      1-1-KJH-T&nbsp;&nbsp;31
+                      1-1-KJH-T&nbsp;&nbsp;&nbsp;31
                     </span>
                   </div>
                 </div>
