--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       <header id="header">
         <div class="header__sitetitle">
           <div class="header__sitetitle__item item--1" data-sort="random">
-            <a href="#"> PADO </a>
+            <a href="#"> <img src="./assets/img/logo.svg" /> </a>
           </div>
         </div>
 
@@ -200,13 +200,12 @@
               <br />
 
               Yongsan-gu, Seoul
-              <br />
+              <br /><br />
 
-              <!--               
               <a href="mailto:sansuhwatea@naver.com">sansuhwatea@naver.com</a>
               <br />
 
-              +82 2 749 3138 -->
+              +82 2 749 3138
             </p>
           </div>
 
@@ -276,9 +275,9 @@
           </div>
 
           <div class="menu__item pages">
-            <!-- <div class="pages__item">
+            <div class="pages__item">
               <a href="./">Home </a>
-            </div> -->
+            </div>
 
             <div class="pages__item">
               <a href="./information/" class="page--information">
@@ -313,13 +312,13 @@
               class="mapping__sort__button mapping__sort--random sort--active"
               data-sort="random"
             >
-              <img src="./assets/img/shuffle.png" />&nbsp;Shuffle
+              <img src="./assets/img/shuffle.png" />&nbsp;&nbsp;Shuffle
             </div>
             <div
               class="mapping__sort__button mapping__sort--chronological sort--inactive"
               data-sort="default"
             >
-              <img src="./assets/img/inorder.png" />&nbsp;In order
+              <img src="./assets/img/inorder.png" />&nbsp;&nbsp;In order
             </div>
           </div>
         </div>
