--- a/information/index.html
+++ b/information/index.html
@@ -149,7 +149,9 @@
       <header id="header">
         <div class="header__sitetitle">
           <div class="header__sitetitle__item item--1" data-sort="random">
-            <a href="../" target="_self" rel="noopener noreferrer"> PADO </a>
+            <a href="../" target="_self" rel="noopener noreferrer"
+              ><img src="../../assets/img/logo.svg"
+            /></a>
           </div>
         </div>
 
@@ -393,26 +395,16 @@
 
           <div class="information__item information__more more--left">
             <div class="more__item">
-              <p class="more__item__header">Owner</p>
+              <p class="more__item__header">Sansuhwa Teahouse Owner</p>
 
               <div class="more__item__text">
                 <p>Jung Hye-Joo</p>
               </div>
+              <figure><img src="../assets/img/logo-fulltype.svg" /></figure>
             </div>
 
-            <!-- <div class="more__item">
-              <p class="more__item__header">Team</p>
-
-              <div class="more__item__text">
-                <p>
-                  • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • •
-                  • • • • •
-                </p>
-              </div>
-            </div> -->
-
             <div class="more__item">
-              <p class="more__item__header">Sansuhwa Teahouse</p>
+              <p class="more__item__header"></p>
 
               <div class="more__item__text">
                 <p>
@@ -470,7 +462,7 @@
 
           <div class="information__item information__more more--right">
             <div class="more__item">
-              <p class="more__item__header">*Sansuhwa Shop:</p>
+              <p class="more__item__header">* Sansuhwa Website</p>
 
               <div class="more__item__text">
                 <p>
@@ -484,7 +476,7 @@
               </div>
             </div>
             <div class="more__item">
-              <p class="more__item__header">*Gallery [BAAT] Archive:</p>
+              <p class="more__item__header">* Gallery [BAAT] Archive Website</p>
 
               <div class="more__item__text">
                 <p>
