--- a/newflavorsoftea/1-1-hwk-p/index.html
+++ b/newflavorsoftea/1-1-hwk-p/index.html
@@ -149,7 +149,7 @@
       <header id="header">
         <div class="header__sitetitle">
           <div class="header__sitetitle__item item--1" data-sort="random">
-            <a href="../../"> PADO </a>
+            <a href="../../"><img src="../../assets/img/logo.svg" /></a>
           </div>
         </div>
 
@@ -177,7 +177,7 @@
               <br />
 
               Yongsan-gu, Seoul
-              <br />
+              <br /><br />
               <a href="mailto:sansuhwatea@naver.com">sansuhwatea@naver.com</a>
               <br />
 
