--- a/index.html
+++ b/index.html
@@ -312,7 +312,9 @@
               class="mapping__sort__button mapping__sort--random sort--active"
               data-sort="random"
             >
-              <img src="./assets/img/shuffle.png" />&nbsp;&nbsp;Shuffle
+              <span class="ranbtn">
+                <img src="./assets/img/shuffle.png" />&nbsp;&nbsp;Shuffle</span
+              >
             </div>
             <div
               class="mapping__sort__button mapping__sort--chronological sort--inactive"
@@ -2395,8 +2397,8 @@
     <!-- <script src="./assets/js/functions.js"></script> -->
     <script src="./assets/js/bundle.js"></script>
 
-    <script src="./assets/js/main-attr.js"></script>
+    <script src="./assets/js/main-functions.js"></script>
 
-    <script></script>
+   
   </body>
 </html>
