--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -149,7 +149,7 @@
       <header id="header">
         <div class="header__sitetitle">
           <div class="header__sitetitle__item item--1" data-sort="random">
-            <a href="../" target="_self" rel="noopener noreferrer"> PADO </a>
+            <a href="../" target="_self" rel="noopener noreferrer"><img src="../../assets/img/logo.svg" /></a>
           </div>
         </div>
 
